k8s/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
 name: my-nodeport-service
spec:
 type: NodePort

 selector:
   app: my-app

 ports:
 - name: http
   port: 80
   targetPort: 80
   nodePort: 30036 # Какой порт открыть на узлах, лучше оставить на выбор k8s
   protocol: TCP
